--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,15 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  cupertino_icons: ^1.0.2
+  provider: ^5.0.0
+  image_picker: ^0.8.0+3
+  path: ^1.8.0
+  location: ^4.3.0
+  sqflite: ^2.0.0+3
+  table_calendar: ^3.0.0
+  url_launcher: ^6.0.6
+  url_launcher_web: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
