--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_radar_chart: ^0.2.1
 
 dev_dependencies:
   intl: ^0.15.7
@@ -40,6 +41,7 @@ dev_dependencies:
   path: ^1.8.0
   location: ^4.3.0
   sqflite: ^2.0.0+3
+  flutter_radar_chart: ^0.2.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
